2012-12-14  Akinori MUSHA  <knu@iDaemons.org>  (tiny change)

	* sieve-mode.el (sieve-font-lock-keywords):
	Keywords should be word delimited.  (Bug#13173)

2012-12-13  Andreas Schwab  <schwab@suse.de>

	* tls.el (tls-program): Update customize type.

2012-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-parts): Use <div align="left">
	instead of <pre> to align message header.

2012-12-12  Sam Steingold  <sds@gnu.org>

	* gnus.el (gnus-other-frame-resume-function): Add user option.
	(gnus-other-frame): Call `gnus-other-frame-resume-function' on resume.

2012-12-06  Sam Steingold  <sds@gnu.org>

	* gnus-start.el (gnus-before-resume-hook): Add.
	(gnus-1): Run it when Gnus is alive.

2012-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-called-interactively-p): Restore as a macro.
	* gnus-art.el (article-unsplit-urls)
	* gnus-bookmark.el (gnus-bookmark-bmenu-list)
	* gnus-registry.el (gnus-registry-get-article-marks)
	* message.el (message-goto-body): Use it.
	(message-called-interactively-p): Remove.

	* spam-stat.el (spam-stat-called-interactively-p): New macro.
	(spam-stat-score-buffer): Use it.

	* spam.el: Silence the warnings against BBDB functions when compiling.

	* gnus-score.el (gnus-score-decode-text-parts):
	Use append+mapcar instead of the cl function mapcan.

2012-12-05  Sam Steingold  <sds@gnu.org>

	* gnus.el (gnus-delete-gnus-frame): Extract from `gnus-other-frame'.
	(gnus-other-frame): Add `gnus-delete-gnus-frame' to
	`gnus-suspend-gnus-hook' in addition to `gnus-exit-gnus-hook'.

2012-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-called-interactively-p): Revert.
	This seems to cause Emacs to get stuck!
	* gnus-art.el (article-unsplit-urls)
	* gnus-bookmark.el (gnus-bookmark-bmenu-list)
	* gnus-registry.el (gnus-registry-get-article-marks)
	* message.el (message-goto-body)
	(message-called-interactively-p): Revert.

	* gmm-utils.el (gmm-called-interactively-p): New function.