@@ -1,3 +1,8 @@
+2012-12-22  Philipp Haselwarter <philipp@haselwarter.org>
+
+	* gnus-sync.el (gnus-sync-file-encrypt-to, gnus-sync-save): Set
+	epa-file-encrypt-to from variable to avoid querying.
+
 2012-12-14  Akinori MUSHA  <knu@iDaemons.org>  (tiny change)
 
 	* sieve-mode.el (sieve-font-lock-keywords):
